Gotowy formularz baza

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <li><a href="#galeria">Galeria</a></li>
           <li><a href="#cennik">Cennik</a></li>
           <li><a href="#kontakt">Kontakt</a></li>
+          <li><a href="formularz.html">Formularz zgłoszeniowy</a></li>
         </ul>
         <div id="burgerMenu" class="burger-menu">
           <div class="burger-line"></div>
