--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="hero-image">
     <img src="https://placedog.net/1200/800" alt="Piesek w hotelu" class="hero-dog-image" id="heroImage">
   </div>
-  <button>Zarezerwuj pobyt</button>
+ <button onclick="window.location.href='formularz.html'">Zarezerwuj pobyt</button>
 </section>
   
   <section class="about-us" id="onas">
@@ -121,12 +121,12 @@
   <section class="gallery" id="galeria">
     <h2>Galeria</h2>
     <div class="gallery-grid">
-      <img src="https://placedog.net/400/300?id=1" alt="Piesek 1">
-	  <img src="https://placedog.net/400/300?id=2" alt="Piesek 2">
-	  <img src="https://placedog.net/400/300?id=3" alt="Piesek 3">
- 	  <img src="https://placedog.net/400/300?id=4" alt="Piesek 4">
-	  <img src="https://placedog.net/400/300?id=5" alt="Piesek 5">
-	  <img src="https://placedog.net/400/300?id=6" alt="Piesek 6">
+     <img src="images/galeria/1.jpg" alt="Piesek 1">
+<img src="images/galeria/2.jpg" alt="Piesek 2">
+<img src="images/galeria/3.jpg" alt="Piesek 3">
+<img src="images/galeria/4.jpg" alt="Piesek 4">
+<img src="images/galeria/5.jpg" alt="Piesek 5">
+<img src="images/galeria/6.jpg" alt="Piesek 6">
     </div>
   </section>
 
@@ -179,9 +179,9 @@
     <div class="contact-info">
       <p>Skontaktuj się z nami!</p>
       <ul>
-        <li><strong>Telefon:</strong> <a href="tel:+123456789">+12 345 6789</a></li>
-        <li><strong>Email:</strong> <a href="mailto:kontakt@nadrudawa.pl">kontakt@nadrudawa.pl</a></li>
-        <li><strong>Adres:</strong> Nad Rudawą 123, 00-000 Miasto</li>
+        <li><strong>Telefon (również Whatsapp):</strong> <a href="tel:+34 007 715">534 007 715</a></li>
+        <li><strong>Email:</strong> <a href="mailto:kontakt@nadrudawa.pl">ostojapsia@gmail.com</a></li>
+        <li><strong>Adres:</strong> Marynarska 53, 30-236 Kraków </li>
       </ul>
     </div>
     
