Nowe obrazki clock,nature

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h2>Dlaczego my?</h2>
     <div class="features">
       <div class="feature">
-        <img src="images/home.png" alt="Domowa opieka">
+        <img src="images/home.png" alt="Blisko natury">
         <h3>Domowa opieka</h3>
         <p>Twój pies poczuje się jak w domu – bez klatek, z miłością i troską.</p>
       </div>
