--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nad Rudawą - Hotelik dla psów</title>
+  <title>Psia Ostoja - Hotelik dla zwierząt</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,8 +11,7 @@
     <div class="header-inner">
       <img src="images/logo.png" alt="Logo Nad Rudawą" class="logo">
       <div class="header-text">
-        <h1>Nad Rudawą</h1>
-        <p>Hotelik dla psów</p>
+        
       </div>
       <nav>
         <ul id="navMenu">
