--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </header>
 
   <section class="hero">
-  <h2>Domowa opieka dla Twojego psa fdsgerhgrethSDGSDFGDFHG</h2>
+  <h2>Domowa opieka dla Twojego psa</h2>
   <p>Bezklatkowy hotel wśród natury, z całodobową opieką.</p>
   <div class="hero-image">
     <img src="https://placedog.net/1200/800" alt="Piesek w hotelu" class="hero-dog-image" id="heroImage">
