--- a/formularz.html
+++ b/formularz.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Formularz – Nad Rudawą</title>
+  <title>Psia Ostoja - Hotelik dla zwierząt</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="images/logo.png" type="image/png" />
 </head>
 <body>
   <!-- Nagłówek jak na głównej stronie -->
@@ -12,19 +13,17 @@
     <div class="header-inner">
       <img src="images/logo.png" alt="Logo Nad Rudawą" class="logo">
       <div class="header-text">
-        <h1>Nad Rudawą</h1>
-        <p>Hotelik dla psów</p>
+        
       </div>
       <nav>
-        <ul id="navMenu">
-          <li><a href="index.html">Strona główna</a></li>
-          <li><a href="index.html#onas">O nas</a></li>
-          <li><a href="index.html#oferta">Oferta</a></li>
-          <li><a href="index.html#galeria">Galeria</a></li>
-          <li><a href="index.html#cennik">Cennik</a></li>
-          <li><a href="index.html#kontakt">Kontakt</a></li>
-          <li><a href="formularz.html" class="active">Formularz zgłoszeniowy</a></li>
-        </ul>
+   <ul id="navMenu">
+  <li><a href="index.html#onas">O nas</a></li>
+  <li><a href="index.html#oferta">Oferta</a></li>
+  <li><a href="index.html#galeria">Galeria</a></li>
+  <li><a href="index.html#cennik">Cennik</a></li>
+  <li><a href="index.html#kontakt">Kontakt</a></li>
+  <li><a href="formularz.html" class="active">Formularz zgłoszeniowy</a></li>
+</ul>
         <div id="burgerMenu" class="burger-menu">
           <div class="burger-line"></div>
           <div class="burger-line"></div>
