--- a/formularz.html
+++ b/formularz.html
@@ -9,37 +9,33 @@
 </head>
 <body>
   <!-- Nagłówek jak na głównej stronie -->
-  <header>
-    <div class="header-inner">
-      <img src="images/logo.png" alt="Logo Nad Rudawą" class="logo">
-      <div class="header-text">
-        
+<header>
+  <div class="header-inner">
+    <img src="images/logo.png" alt="Logo Nad Rudawą" class="logo">
+    <nav>
+      <ul id="navMenu">
+        <li><a href="index.html#onas">O nas</a></li>
+        <li><a href="index.html#oferta">Oferta</a></li>
+        <li><a href="index.html#galeria">Galeria</a></li>
+        <li><a href="index.html#cennik">Cennik</a></li>
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+        <li><a href="formularz.html" class="active">Formularz zgłoszeniowy</a></li>
+      </ul>
+      <div id="burgerMenu" class="burger-menu">
+        <div class="burger-line"></div>
+        <div class="burger-line"></div>
+        <div class="burger-line"></div>
       </div>
-      <nav>
-   <ul id="navMenu">
-  <li><a href="index.html#onas">O nas</a></li>
-  <li><a href="index.html#oferta">Oferta</a></li>
-  <li><a href="index.html#galeria">Galeria</a></li>
-  <li><a href="index.html#cennik">Cennik</a></li>
-  <li><a href="index.html#kontakt">Kontakt</a></li>
-  <li><a href="formularz.html" class="active">Formularz zgłoszeniowy</a></li>
-</ul>
-        <div id="burgerMenu" class="burger-menu">
-          <div class="burger-line"></div>
-          <div class="burger-line"></div>
-          <div class="burger-line"></div>
-        </div>
-      </nav>
-    </div>
-  </header>
+    </nav>
+  </div>
+</header>
 
-  <main class="formularz-container">
-    <h2 class="formularz-title">Zarezerwuj pobyt dla swojego psa</h2>
-    <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSdydq6SPJUts13MZKiMdn6TRmMl7a12btz_SzjYFX2x2V1AzA/viewform?embedded=true"
-      width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">
-      Ładuję…
-    </iframe>
-  </main>
-</body>
-</html>
+<main class="formularz-container">
+  <h2 class="formularz-title">Zarezerwuj pobyt dla swojego psa</h2>
+  <iframe
+    src="https://docs.google.com/forms/d/e/1FAIpQLSdydq6SPJUts13MZKiMdn6TRmMl7a12btz_SzjYFX2x2V1AzA/viewform?embedded=true"
+    width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0" loading="lazy">
+    Ładuję…
+  </iframe>
+  <script src="script.js"></script>
+</main>
