--- a/index.html
+++ b/index.html
@@ -20,22 +20,27 @@
         <li><a href="#kontakt">Kontakt</a></li>
         <li><a href="formularz.html">Formularz zgłoszeniowy</a></li>
       </ul>
-      <div id="burgerMenu" class="burger-menu">
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
-        <div class="burger-line"></div>
-      </div>
+      
+
+     <div class="burger-menu" id="burgerMenu">
+  <span class="burger-line"></span>
+  <span class="burger-line"></span>
+  <span class="burger-line"></span>
+</div>
+  </div>
+
+</div>
     </nav>
   </div>
 </header>
 
-  <section class="hero">
+<section class="hero">
   <h2>Domowa opieka dla Twojego psa</h2>
   <p>Bezklatkowy hotel wśród natury, z całodobową opieką.</p>
   <div class="hero-image">
-    <img src="https://placedog.net/1200/800" alt="Piesek w hotelu" class="hero-dog-image" id="heroImage">
+    <img src="images/Slider/1.jpg" alt="Piesek w hotelu" class="hero-dog-image" id="heroImage">
   </div>
- <button onclick="window.location.href='formularz.html'">Zarezerwuj pobyt</button>
+  <button onclick="window.location.href='formularz.html'">Zarezerwuj pobyt</button>
 </section>
   
   <section class="about-us" id="onas">
@@ -96,9 +101,7 @@
         <p>
           Przyjmujemy psy oraz zwierzątka klatkowe z własnymi klatkami. Psy muszą posiadać książeczkę zdrowia z aktualnymi szczepieniami, muszą być zabezpieczone przed pchłami i kleszczami oraz odrobaczone.
         </p>
-        <p>
-          Nie przyjmujemy nie wykastrowanych samców oraz suk w okresie rui.
-        </p>
+       
         <p>
           Sposób żywienia jest indywidualnie ustalany z właścicielem psa.
         </p>
