--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <section class="hero">
   <h2>Domowa opieka dla Twojego psa</h2>
-  <p>Duży ogórd, zaciszne miejsce z całodobową opieką</p>
+  <p>Duży ogród, zaciszne miejsce z całodobową opieką</p>
   <button onclick="window.location.href='formularz.html'">Zarezerwuj pobyt</button>
   <br><br>
   <div class="hero-image">
@@ -54,19 +54,18 @@
       </p>
       <p>
         Mamy duży, ogrodzony ogród, który działa jak prywatny park rozrywki dla psów – ganianie za patykami,
-        tarzanie się w trawie i chill pod drzewem w cenie każdej doby 🐕🌳
+        tarzanie się w trawie i relaks pod drzewem w cenie każdej doby 🐕🌳
       </p>
-      
       <p>
         Mieszkamy w spokojnej okolicy, a sąsiedzi to sami psiolubni ludzie – nie zdziw się, jeśli Twój pupil wróci
         do domu z nowymi znajomymi (czworonożnymi i dwunożnymi).
-        <p>Mamy do zaproponowania dla waszych pupili genialne trasy spacerowe w tym:
-        <P><strong>2,5 km</strong> do Kopca Piłsudskiego</P>
-        <p><strong>1,2 km </strong>do Lasu Wolskiego></p>
-        <p><strong>350m</strong> do wałów Rudawy</p>
-          
-      Tylko <strong>6km</strong> na lotnisko w Balicach żebyście mogli polecieć na swoje upragnione wakacej, a nam zostawić pod opiekę pupila</p>
-
+      </p>
+      <p>Mamy do zaproponowania dla Waszych pupili genialne trasy spacerowe, w tym:</p>
+      <p><strong>2,5 km</strong> do Kopca Piłsudskiego</p>
+      <p><strong>1,2 km</strong> do Lasu Wolskiego</p>
+      <p><strong>350 m</strong> do wałów Rudawy</p>
+      <p>
+        Tylko <strong>6 km</strong> na lotnisko w Balicach, żebyście mogli polecieć na swoje upragnione wakacje, a nam zostawić pod opiekę pupila.
       </p>
       <p>
         Jeśli chcesz zostawić swojego pupila w miejscu, gdzie będzie traktowany jak członek rodziny – jesteś we
