--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="feature">
         <img src="images/nature.png" alt="Blisko natury">
         <h3>Blisko natury</h3>
-        <p>Położenie nad Rudawą - blisko Lasu Wolskeigo zapewnia spacery wśród zieleni i świeżego powietrza.</p>
+        <p>Położenie nad Rudawą - blisko Lasu Wolskiego zapewnia spacery wśród zieleni i świeżego powietrza.</p>
       </div>
       <div class="feature">
         <img src="images/clock.png" alt="Całodobowa opieka">
