--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Psia Ostoja - Hotelik dla zwierząt</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/logo.png" type="image/png" />
 </head>
@@ -224,6 +225,21 @@
     <p>&copy; 2025 Nad Rudawą | Kontakt: kontakt@nadrudawa.pl</p>
   </footer>
 
+
+<div class="social-floating-icons">
+  <a href="https://www.facebook.com/twojprofil" class="facebook" target="_blank" aria-label="Facebook">
+    <i class="fab fa-facebook-f"></i>
+  </a>
+  <a href="https://www.instagram.com/twojprofil" class="instagram" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+  <a href="https://wa.me/48123456789" class="whatsapp" target="_blank" aria-label="WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
+</div>
+
 <script src="script.js"></script>
+
+
 </body>
 </html>
