--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
 
 
 <div class="social-floating-icons">
-  <a href="https://www.facebook.com/twojprofil" class="facebook" target="_blank" aria-label="Facebook">
+  <a href="https://www.facebook.com/profile.php?id=61576833571452" class="facebook" target="_blank" aria-label="Facebook">
     <i class="fab fa-facebook-f"></i>
   </a>
-  <a href="https://www.instagram.com/twojprofil" class="instagram" target="_blank" aria-label="Instagram">
+  <a href="https://www.instagram.com/psiaostoja/" class="instagram" target="_blank" aria-label="Instagram">
     <i class="fab fa-instagram"></i>
   </a>
-  <a href="https://wa.me/48123456789" class="whatsapp" target="_blank" aria-label="WhatsApp">
+  <a href="https://wa.me/+48534007715" class="whatsapp" target="_blank" aria-label="WhatsApp">
     <i class="fab fa-whatsapp"></i>
   </a>
 </div>
