--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
   </a>
 </div>
 
+<div id="lightbox" class="lightbox">
+   <span class="lightbox-close">&times;</span>
+  <span class="lightbox-arrow lightbox-prev">&#10094;</span>
+  <img class="lightbox-img" src="" alt="Powiększone zdjęcie">
+  <span class="lightbox-arrow lightbox-next">&#10095;</span>
+</div>
+
 <script src="script.js"></script>
 
 
